# agent-as-app

./: README.md  pyproject.toml
app/: .env  main.py
app/my_agent/: agent.py  todo.py  txn.py
app/static/: index.html
app/static/css/: style.css
app/static/js/: app.js
