[project]
name = "bidi-workshop"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "google-adk>=1.26.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-dotenv>=1.0.0",
    "websockets>=13.0",
    "ag-ui-adk>=0.1.0",
    "cloud-sql-python-connector[pg8000]>=1.20.3",
    "fastapi>=0.115.0",
    "google-adk>=2.1.0",
    "google-api-python-client>=2.197.0",
    "google-cloud-aiplatform>=1.154.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
    "tzlocal>=5.3.1",
    "uvicorn[standard]>=0.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
